style(cuicuitedays.ts): update appContentBg color to match appBg color for better consistency feat(globals.css): add font-face rule for "Magic Retro" font to be used in the application feat(colors.mdx): create a new story file to display color palette with different theme colors feat(typographie.mdx): create a new story file to display typography details including font, weight, and sizes for Montserrat and Magic Retro fonts chore(tsconfig.json): add path alias for tailwind-config to point to tailwind.config.ts file

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,11 @@
     font-family: 'Montserrat';
     src: url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;1,100;1,200;1,300&display=swap');
   }
+
+  @font-face {
+    font-family: "Magic Retro";
+    src: url("../../public/font/Magic Retro.woff2") format("woff2");
+  }
 }
 
 @layer utilities {
